--- a/css/profitquery_smart_widgets_wordpress_v2.css
+++ b/css/profitquery_smart_widgets_wordpress_v2.css
@@ -21,7 +21,7 @@
 #free_profitquery .btn-m {font-size: 15px; color: #F4335C; border: 1px solid red; padding: 4px 20px 7px; border-radius: 3px; margin-top: 15px;}
 #free_profitquery img {max-width: 100%;}
 #free_profitquery .pq-panel-body>.pq-sm-6 {margin-top: 25px; margin-bottom: 0px;}
-#free_profitquery input[type="text"], #free_profitquery input[type="checkbox"], #free_profitquery select {color: #B1B1B1; font-size: 16px; border-radius: 2px; border: 1px solid rgb(176, 176, 176); line-height: 28px; box-sizing: border-box;}
+#free_profitquery input[type="text"], #free_profitquery input[type="checkbox"], #free_profitquery select {color: #B1B1B1; font-size: 16px; border-radius: 2px; border: 1px solid rgb(176, 176, 176); /*line-height: 28px;*/ box-sizing: border-box;}
 #free_profitquery .pq-sm-6>select  {width: 100%; box-sizing: border-box; padding: 4px; display: block; border: 1px solid rgb(176, 176, 176);}
 #free_profitquery .pq-sm-6>input{width: 90%; box-sizing: border-box;padding: 4px;height: 31px;}
 #free_profitquery .pq-sm-6>img{display: block; margin: 0 auto;}
